# UtaipeiwU

./: .firebaserc  .gitignore  README.md  firebase.json  index.html  package.json  pyproject.toml  style.css
.firebase/: hosting.cHVibGlj.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
course-data/: 1091-data.json  10910-data.json  11010-data.json  department.json
course_crawler/: __main__.py  crawler.py  model.py  settings.py
course_crawler/utils/: constant.py
get_course/: data.json  main.js  package-lock.json  package.json
js/: app.js  config.js
parse-data/: 11010-data.json  11020-data.json  11110-data.json  11120-data.json  11210-data.json  11220-data.json  11310-data.json  11320-data.json  11410-data.json  data.json  genCourses.js  genUnits.js  package.json  課表.ipynb
public/: index.html
public/course-data/: 10910-data.json  10920-data.json  11010-data.json  11020-data.json  11110-data.json  11120-data.json  11210-data.json  11220-data.json  11310-data.json  11320-data.json  11410-data.json  department.json
public/js/: app.js  config.js
tests/: conftest.py  test_crawler.py
tests/data/: ag304_03.html
