[tool.poetry]
name = "utaipeiwu"
version = "0.1.0"
description = ""
authors = ["海獺 <brianchou452@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
numpy = "^2.2.0"
requests = "^2.32.3"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
httpx = "^0.28.1"
yarl = "^1.18.3"
pandas = "^2.2.3"
aiofiles = "^24.1.0"
lxml = "^5.3.0"
loguru = "^0.7.3"
html5lib = "^1.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.30.0"
ipykernel = "^6.29.5"
pytest = "^8.3.4"
types-aiofiles = "^24.1.0.20240626"
mypy = "^1.13.0"
types-beautifulsoup4 = "^4.12.0.20241020"
pandas-stubs = "^2.2.3.241126"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
